snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
99277787609a572dd07ded5269585d55